--- a/report/HW_Module3_Evan_Woods.tex
+++ b/report/HW_Module3_Evan_Woods.tex
@@ -283,13 +283,19 @@ A \href{https://3d.nih.gov/entries/3DPX-021161}{Detailed Human Brain Model (3D)}
 
 \FloatBarrier
 
-\newpage
 \section{Part 4: Discussion}
 \textit{(2 points) Question does not need to be successfully answered, but the grader should be convinced that the author has answered the question to the best ability of the methodology presented.}
 \textit{(1 point) Provides commentary on what was discovered, what were the limitations of the methods, what may have been surprising to discover, etc.}
 \textit{(1 point) Award this point if the question was successfully answered to the grader's satisfaction. }
 
-\FloatBarrier
+Figure \ref{fig:2D} shows that there are more brain regions with activity to the substantia nigra in cognitively normal patients. This is to be expected as other regions of the brain would have healthy BOLD signals as well as the substantia nigra region. 
+
+The MCI group, shown in Figure \ref{fig:mci}, had no region that had no stastically significant difference from the substantia nigra fALFF. This indicates that the substantia nigra is not functioning like the BOLD signals of other regions of the brain for this group of diagnosed patients. This is to be expected when the substantia nigra is showing poor functional activity in the BOLD signal. 
+
+The PDD group, shown in Figure \ref{fig:pdd}, showed correlation only with the left claudate which in located in the basal ganglia and is responsible for motor-coordinated tasks. This correlated fALFF values of BOLD signal activity with a low-active fALFF in the substantia nigra is indicative of Parkinson's that has affected both regions of the brain. 
+
+Visualizations such as these are useful in depicting Parkinson's as a disease. The more that is known about the disease, the more readily abled doctor's are to combat it. With a condition such as this, awareness and prevention serve as best ailments, and visualizing activity of these regions as well as possibly predicting future BOLD signal declination are good measures of preventing poor cognitive health through proactive awareness for those that may be genetically or otherwise inclined to the disease. 
+
 
 % Insert References Section
 \bibliographystyle{plain} % Citation style (alternatives: abbrv, unsrt, apalike, IEEEtran, etc.)
